--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <a id="contact"
                        data-toggle="tooltip" data-placement="bottom"
                        data-html="true" title="<img src='images/contract.png' height='110' width='110'>"
-                       href="tencent://message/?Menu=yes&amp;uin=938023535&amp;Service=58&amp;SigT=A7F6FEA02730C98891AB852F491A7A4D085F096B560826D59B41D25BA6628E65574A970B8AC826255BF6C676005B31DCF1594534504117EA72DE0ADB0F910B9326FD474976A2B73079C198C23C3CA9B675BF9E815FC2D7197673110CE92A3CB0F2B81D6EC58D3775227D6C910E1BE02C289964707DE4BCF5&amp;SigU=30E5D5233A443AB2E244466D230790DD0DFB67CDF9A9F88D0EF818CE689A31D58F8DDC3DDF4A4ACDC5EC092189DB5DF36678337BADED9C9FB6CB54F420B2D6C484FE2A5DCB50EDF6">
+                       href="">
                         <span class="icon icon-tux">联系客服</span>
 
                     </a>
